@@ -2,6 +2,7 @@ Revision history for URI::Fetch
 
 0.09  2011.01.28
     - Use $ua->env_proxy to load local proxy settings. (RT 53819)
+    - Skip tests if we don't have a network connection. (RT 28388, 59694)
     - Removed sign() and auto_install() from Makefile.PL.
     - Removed magic svn keywords.
     - Added author tests (xt/) and modified SYNOPSIS for all modules to
